# cheap-stocks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
input/: stocks.csv
src/cheap_stocks/: __init__.py  __main__.py  analysis.py  data_source.py  io_utils.py  main.py
tests/: test_analysis.py  test_io.py
